@@ -1,3 +1,6 @@
+2001-09-17  Ryan Nunn <triforce@merlin.net.au>
+	* objs/animate.cc : Fixed potential problem when saving
+
 2001-09-17  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* usecode/*:  Set_item_frame_rot() added.
